# Generated by Django 5.0.6 on 2025-12-18 20:52

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auctions', '0001_initial'),
        ('orders', '0003_order_reference_code_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('notification_type', models.CharField(choices=[('auction_won', 'ชนะการประมูล'), ('auction_outbid', 'ถูกบิดแซง'), ('auction_ending', 'ประมูลใกล้จบ'), ('order_created', 'มีคำสั่งซื้อใหม่'), ('order_paid', 'ได้รับการชำระเงิน'), ('order_shipped', 'สินค้าถูกจัดส่ง'), ('new_message', 'มีข้อความใหม่'), ('system', 'แจ้งเตือนจากระบบ')], default='system', max_length=20)),
                ('title', models.CharField(max_length=200)),
                ('message', models.TextField()),
                ('link', models.CharField(blank=True, max_length=500)),
                ('is_read', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('auction', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='auctions.auction')),
                ('order', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='orders.order')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-created_at'],
                'indexes': [models.Index(fields=['user', 'is_read'], name='notificatio_user_id_427e4b_idx'), models.Index(fields=['user', 'created_at'], name='notificatio_user_id_c62b26_idx')],
            },
        ),
    ]
