// EzShop Database Schema
// สำหรับ dbdiagram.io
// Copy ทั้งหมดนี้ไปวางที่ https://dbdiagram.io/d

// =====================
// USERS
// =====================
Table User {
  id uuid [pk]
  email varchar(255) [unique, not null]
  phone varchar(20) [unique, not null]
  password varchar(128) [not null]
  first_name varchar(150)
  last_name varchar(150)
  bio text
  profile_picture varchar(255)
  is_active boolean [default: true]
  is_staff boolean [default: false]
  date_joined datetime
  created_at datetime
  updated_at datetime
}

// =====================
// PRODUCTS
// =====================
Table Product {
  id uuid [pk]
  seller_id uuid [ref: > User.id]
  name varchar(150) [not null]
  category varchar(80) [note: 'electronics, fashion, home, sports, books, toys, beauty, automotive, pets, other']
  price decimal(10,2) [not null]
  description text
  condition varchar(10) [note: 'new, used']
  image varchar(255)
  created_at datetime
  updated_at datetime
}

Table ProductImage {
  id bigint [pk, increment]
  product_id uuid [ref: > Product.id]
  image varchar(255) [not null]
  created_at datetime
}

// =====================
// AUCTIONS
// =====================
Table Auction {
  id uuid [pk]
  product_id uuid [unique, ref: - Product.id]
  seller_id uuid [ref: > User.id]
  starting_price decimal(12,2) [not null]
  min_increment decimal(12,2) [not null]
  reserve_price decimal(12,2)
  status varchar(20) [note: 'live, ended, canceled']
  start_at datetime [not null]
  end_at datetime [not null]
  ended_at datetime
  winner_bid_id uuid [unique, ref: - Bid.id]
  final_price decimal(12,2)
  created_at datetime
}

Table Bid {
  id uuid [pk]
  auction_id uuid [ref: > Auction.id]
  bidder_id uuid [ref: > User.id]
  amount decimal(12,2) [not null]
  created_at datetime
}

// =====================
// CHAT
// =====================
Table ChatRoom {
  id uuid [pk]
  product_id uuid [ref: > Product.id]
  auction_id uuid [ref: > Auction.id]
  created_at datetime
  updated_at datetime
}

Table ChatRoom_Participants {
  id bigint [pk, increment]
  chatroom_id uuid [ref: > ChatRoom.id]
  user_id uuid [ref: > User.id]
  
  indexes {
    (chatroom_id, user_id) [unique]
  }
}

Table Message {
  id uuid [pk]
  room_id uuid [ref: > ChatRoom.id]
  sender_id uuid [ref: > User.id]
  content text [not null]
  is_read boolean [default: false]
  created_at datetime
}

// =====================
// ORDERS & PAYMENTS
// =====================
Table Order {
  id uuid [pk]
  buyer_id uuid [ref: > User.id]
  seller_id uuid [ref: > User.id]
  product_id uuid [ref: > Product.id]
  amount decimal(10,2) [not null]
  status varchar(20) [note: 'pending_payment, escrow_held, shipped, completed, disputed, cancelled']
  stripe_payment_intent_id varchar(255)
  stripe_payment_status varchar(50)
  tracking_number varchar(100)
  shipping_carrier varchar(100)
  shipped_at datetime
  created_at datetime
  updated_at datetime
}

// =====================
// NOTIFICATIONS
// =====================
Table Notification {
  id uuid [pk]
  user_id uuid [ref: > User.id]
  notification_type varchar(20) [note: 'auction_won, auction_outbid, auction_ending, order_created, order_paid, order_shipped, new_message, system']
  title varchar(200) [not null]
  message text [not null]
  link varchar(500)
  auction_id uuid [ref: > Auction.id]
  order_id uuid [ref: > Order.id]
  is_read boolean [default: false]
  created_at datetime
}


